[BE-121] refactor: 레코드 작성,조회 서비스 레이어 리팩토링