@@ -1,6 +1,6 @@
 package com.recordit.server.service;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -74,7 +74,7 @@ public class RecordService {
 		);
 
 		Long recordId = recordRepository.save(record).getId();
-		log.info("저장한 레코드 ID : ", record);
+		log.info("저장한 레코드 ID : ", recordId);
 
 		if (files != null) {
 			List<String> urls = imageFileService.saveAttachmentFiles(RefType.RECORD, recordId, files);
@@ -91,20 +91,20 @@ public class RecordService {
 		Record record = recordRepository.findById(recordId)
 				.orElseThrow(() -> new RecordNotFoundException("레코드 정보를 찾을 수 없습니다."));
 
-		List<String> imageUrls = List.of();
+		List<String> imageUrls = Collections.emptyList();
 
 		Optional<List<ImageFile>> optionalImageFileList = imageFileRepository.findByRefIdAndRefType(recordId,
 				RefType.RECORD);
 
 		if (!optionalImageFileList.isEmpty()) {
-			List<String> foundImageUrlList = new ArrayList<>();
+
 			optionalImageFileList.get().stream()
 					.forEach(
 							(imageFile) -> {
-								foundImageUrlList.add(imageFile.getDownloadUrl());
+								imageUrls.add(imageFile.getDownloadUrl());
 							}
 					);
-			imageUrls = foundImageUrlList;
+
 		}
 
 		return RecordDetailResponseDto.builder()
